Route updated and Transactions added into the Swagger file
